// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test circle ui-component circle with head 1`] = `
<div
  className="content "
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head string"
    data-testid="test-circle_head"
  >
    head
  </div>
  <div
    className="circle   default"
    data-testid="test-circle_wrapper"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-testid="test-circle_value"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-testid="test-circle_indexValue"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="test-circle_tail"
  />
</div>
`;

exports[`test circle ui-component circle with index 1`] = `
<div
  className="content "
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="test-circle_head"
  />
  <div
    className="circle   default"
    data-testid="test-circle_wrapper"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-testid="test-circle_value"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-testid="test-circle_indexValue"
  >
    0
  </p>
  <div
    className="text text_type_input text_color_input mt-4 absolute tail60 element"
    data-testid="test-circle_tail"
  />
</div>
`;

exports[`test circle ui-component circle with props isSmall 1`] = `
<div
  className="content "
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="test-circle_head"
  />
  <div
    className="circle  small default"
    data-testid="test-circle_wrapper"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-testid="test-circle_value"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-testid="test-circle_indexValue"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="test-circle_tail"
  />
</div>
`;

exports[`test circle ui-component circle with react-element in head 1`] = `
<div
  className="content "
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="test-circle_head"
  >
    <div
      className="content "
    >
      <div
        className="text text_type_input text_color_input mb-4 absolute head element"
        data-testid="test-circle_head"
      />
      <div
        className="circle   default"
        data-testid="test-circle_wrapper"
      >
        <p
          className="text text_type_circle text_color_input letter"
          data-testid="test-circle_value"
        />
      </div>
      <p
        className="text text_type_input text_color_input mt-4 absolute index"
        data-testid="test-circle_indexValue"
      />
      <div
        className="text text_type_input text_color_input mt-4 absolute tail30 element"
        data-testid="test-circle_tail"
      />
    </div>
  </div>
  <div
    className="circle   default"
    data-testid="test-circle_wrapper"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-testid="test-circle_value"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-testid="test-circle_indexValue"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="test-circle_tail"
  />
</div>
`;

exports[`test circle ui-component circle with react-element in tail 1`] = `
<div
  className="content "
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="test-circle_head"
  />
  <div
    className="circle   default"
    data-testid="test-circle_wrapper"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-testid="test-circle_value"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-testid="test-circle_indexValue"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="test-circle_tail"
  >
    <div
      className="content "
    >
      <div
        className="text text_type_input text_color_input mb-4 absolute head element"
        data-testid="test-circle_head"
      />
      <div
        className="circle   default"
        data-testid="test-circle_wrapper"
      >
        <p
          className="text text_type_circle text_color_input letter"
          data-testid="test-circle_value"
        />
      </div>
      <p
        className="text text_type_input text_color_input mt-4 absolute index"
        data-testid="test-circle_indexValue"
      />
      <div
        className="text text_type_input text_color_input mt-4 absolute tail30 element"
        data-testid="test-circle_tail"
      />
    </div>
  </div>
</div>
`;

exports[`test circle ui-component circle with state changing 1`] = `
<div
  className="content "
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="test-circle_head"
  />
  <div
    className="circle   changing"
    data-testid="test-circle_wrapper"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-testid="test-circle_value"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-testid="test-circle_indexValue"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="test-circle_tail"
  />
</div>
`;

exports[`test circle ui-component circle with state default 1`] = `
<div
  className="content "
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="test-circle_head"
  />
  <div
    className="circle   default"
    data-testid="test-circle_wrapper"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-testid="test-circle_value"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-testid="test-circle_indexValue"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="test-circle_tail"
  />
</div>
`;

exports[`test circle ui-component circle with state modified 1`] = `
<div
  className="content "
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="test-circle_head"
  />
  <div
    className="circle   modified"
    data-testid="test-circle_wrapper"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-testid="test-circle_value"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-testid="test-circle_indexValue"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="test-circle_tail"
  />
</div>
`;

exports[`test circle ui-component circle with tail 1`] = `
<div
  className="content "
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="test-circle_head"
  />
  <div
    className="circle   default"
    data-testid="test-circle_wrapper"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-testid="test-circle_value"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-testid="test-circle_indexValue"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 string"
    data-testid="test-circle_tail"
  >
    tail
  </div>
</div>
`;

exports[`test circle ui-component circle with text 1`] = `
<div
  className="content "
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="test-circle_head"
  />
  <div
    className="circle   default"
    data-testid="test-circle_wrapper"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-testid="test-circle_value"
    >
      letter
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-testid="test-circle_indexValue"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="test-circle_tail"
  />
</div>
`;

exports[`test circle ui-component circle without text 1`] = `
<div
  className="content "
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="test-circle_head"
  />
  <div
    className="circle   default"
    data-testid="test-circle_wrapper"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-testid="test-circle_value"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-testid="test-circle_indexValue"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="test-circle_tail"
  />
</div>
`;
